--- a/lib/client/views/admin-settings-table.html
+++ b/lib/client/views/admin-settings-table.html
@@ -14,12 +14,10 @@
 				<td>{{name}}</td>
 				<td>{{value}}</td>
 				<td>
-					<a href="{{pathFor 'adminSettingsEdit' _id=_id}}" class="hidden-xs btn btn-xs btn-primary"><i class="fa fa-pencil"></i></a>
-					<a href="{{pathFor 'adminSettingsEdit' _id=_id}}" class="visible-xs btn btn-sm btn-primary"><i class="fa fa-pencil"></i> Edit</a>
+					<a href="{{pathFor 'adminSettingsEdit' _id=_id}}" class="visible-xs btn btn-sm btn-primary"><i class="mdi-content-create"></i> Edit</a>
 				</td>
 				<td>
-					<a data-toggle="modal" doc="{{_id}}" href='#admin-delete-modal' class="hidden-xs btn btn-xs btn-danger btn-delete"><i class="fa fa-times" doc="{{_id}}"></i></a>
-					<a data-toggle="modal" doc="{{_id}}" href='#admin-delete-modal' class="visible-xs btn btn-sm btn-danger btn-delete"><i class="fa fa-times" doc="{{_id}}"></i> Delete</a>
+					<a data-toggle="modal" doc="{{_id}}" href='#admin-delete-modal' class="visible-xs btn btn-sm btn-danger btn-delete"><i class="mdi-content-clear" doc="{{_id}}"></i> Delete</a>
 				</td>
 			</tr>
 			{{/each}}
